# dottir

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  IMPLEMENTATION_PLAN.md  IMPROVEMENTS_PLAN.md  NOTICE  README.md  deny.toml  dottir_specification.md
.github/workflows/: ci.yml  release.yml
crates/dottir-cli/: Cargo.toml
crates/dottir-cli/src/: find_peaks.rs  main.rs  periodogram.rs
crates/dottir-core/: Cargo.toml
crates/dottir-core/src/: alphabet.rs  antidiag.rs  error.rs  find_peaks.rs  karlin.rs  lib.rs  matrix.rs  periodogram.rs  pixel.rs  plot.rs  ridges.rs  score_vec.rs  sliding.rs  spectrum.rs  translation.rs
crates/dottir-core/tests/: auto_zoom.rs  karlin_golden.rs  memory_budget.rs  parallel_determinism.rs  phase2_modes.rs  sliding_kernel.rs
crates/dottir-gui/: Cargo.toml
crates/dottir-gui/src/: app.rs  compute_worker.rs  main.rs  session.rs
crates/dottir-io/: Cargo.toml
crates/dottir-io/src/: alignment.rs  dot_format.rs  fasta.rs  lib.rs  params.rs  png_export.rs  sequence.rs  svg_export.rs  text_overlay.rs
crates/dottir-render/: Cargo.toml
crates/dottir-render/src/: fixtures.rs  lib.rs  metrics.rs
crates/dottir-render/tests/: tandem_repeat.rs
docs/: CHANGELOG.md  IMPROVEMENTS_PLAN.md  REVIEW.md  release-process.md  rendering_review.md
docs/adr/: 0001-egui-frontend.md  0002-license-gplv3.md  0003-gui-msrv.md  0004-defer-gff3-paf.md  README.md
docs/book/: book.toml
docs/book/src/: SUMMARY.md  adr.md  algorithm.md  cli.md  crates.md  find-peaks.md  gui.md  install.md  intro.md  matrices.md  periodogram.md  reproducibility.md
docs/reviews/: dotter-sizing-model.md  find-peaks-improvements-response.md  find-peaks-improvements.md  gui-nearest-upscale-jaggedness.md  kitehor-integration.md  tandem-repeat-square-variation.md
recipe/: bld.bat  build.sh  conda_build_config.yaml  meta.yaml
scripts/: find_peaks.py  kite_profile_to_dottir.py
tests/golden/: README.md
tests/golden/karlin/: regen.cmd  values.tsv
tests/golden_gen/: karlin_ref  karlin_ref.c
