[package]
name = "dottir-cli"
description = "Headless dottir batch CLI"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "dottir"
path = "src/main.rs"

[dependencies]
dottir-core = { workspace = true }
dottir-io = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
