[package]
name = "dottir-core"
description = "Core dot-matrix plotting algorithms — I/O-free, GUI-free"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
rayon = { workspace = true, optional = true }
realfft = { workspace = true }

[features]
default = ["rayon"]
# `rayon` enables compute_dotplot to use a parallel subject-chunked driver.
# Disable for WASM or to verify single-thread determinism.
rayon = ["dep:rayon"]

[dev-dependencies]
proptest = { workspace = true }
rayon = { workspace = true }
