[package]
name = "dottir-gui"
description = "Interactive dottir GUI (egui/eframe)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "dottir-gui"
path = "src/main.rs"

[dependencies]
dottir-core = { workspace = true }
dottir-io = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# egui/eframe added in Phase 5 once the GUI MVP starts
