[package]
name = "dottir-gui"
description = "Interactive dottir GUI (egui/eframe)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "dottir-gui"
path = "src/main.rs"

[dependencies]
dottir-core = { workspace = true }
dottir-io = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# eframe/egui will be added once the workspace MSRV is bumped past
# Rust 1.75. As of 2026-05, the egui ≥ 0.27 dependency chain
# (winit → toml_edit-0.25 → indexmap-2.14) requires edition2024 which
# stabilised in 1.85. Tracked in docs/adr/0003-gui-msrv.md.
