[package]
name = "dottir-gui"
description = "Interactive dottir GUI (egui/eframe)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "dottir-gui"
path = "src/main.rs"

[dependencies]
dottir-core = { workspace = true }
dottir-io = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.29"
rfd = "0.15"
