[package]
name = "dottir-render"
description = "Pure rendering pipeline for dottir DotPlots — testable independently of egui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
dottir-core = { workspace = true }
